<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonNeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:minWidth="44dip"
        android:text="Neg"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonDivide"
        app:layout_constraintStart_toEndOf="@+id/buttonDivide" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="44dip"
        android:text="C"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonMultiply"
        app:layout_constraintStart_toStartOf="@+id/buttonNeg" />

    <EditText
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="-86345.45" />

    <TextView
        android:id="@+id/operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/newNumber"
        app:layout_constraintEnd_toStartOf="@+id/newNumber"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="laksdj" />

    <EditText
        android:id="@+id/newNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="44dip"
        android:text="0"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonDot"
        app:layout_constraintStart_toStartOf="@+id/button1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="44dip"
        android:text="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="44dip"
        android:text="2"
        app:layout_constraintBaseline_toBaselineOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/button5" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="44dip"
        android:text="3"
        app:layout_constraintStart_toStartOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="44dip"
        android:text="4"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/button7" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="44dip"
        android:text="5"
        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
        app:layout_constraintStart_toStartOf="@+id/button8" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="44dip"
        android:text="6"
        app:layout_constraintStart_toStartOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="44dip"
        android:text="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newNumber" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:minWidth="44dip"
        android:text="7"
        app:layout_constraintBaseline_toBaselineOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button8" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:minWidth="44dip"
        android:text="8"
        app:layout_constraintBaseline_toBaselineOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button9" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:minWidth="44dip"
        android:text="/"
        app:layout_constraintBaseline_toBaselineOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button9" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="44dip"
        android:text="*"
        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
        app:layout_constraintStart_toStartOf="@+id/buttonDivide" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="44dip"
        android:text="-"
        app:layout_constraintBaseline_toBaselineOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/buttonMultiply" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="44dip"
        android:text="+"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEquals"
        app:layout_constraintStart_toStartOf="@+id/buttonMinus" />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="44dip"
        android:text="."
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEquals"
        app:layout_constraintStart_toStartOf="@+id/button2" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="44dip"
        android:text="="
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

</androidx.constraintlayout.widget.ConstraintLayout>